--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -2,9 +2,10 @@
 abstract: 'TLS/SSL tunnel'
 author:
   - 'Viacheslav Tykhanovskyi <vti@cpan.org>'
-build_requires: {}
+build_requires:
+  ExtUtils::MakeMaker: 0
 configure_requires: {}
-dynamic_config: 1
+dynamic_config: 0
 generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112621'
 license: artistic_2
 meta-spec:
@@ -23,7 +24,6 @@ requires:
   Scalar::Util: 0
   Test::More: 0
   Test::TCP: 0
-  perl: 5.008007
 resources:
   bugtracker: http://github.com/vti/app-tlsme/issues
   license: http://dev.perl.org/licenses/
