--- a/META.yml
+++ b/META.yml
@@ -5,7 +5,7 @@ author:
 build_requires: {}
 configure_requires: {}
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112621'
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.130880'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,14 +18,16 @@ no_index:
     - t
 requires:
   AnyEvent: 5.34
+  IO::Handle: 0
   Net::SSLeay: 0
   Pod::Usage: 0
+  Proc::Pidfile: 0
   Scalar::Util: 0
   Test::More: 0
-  Test::TCP: 0
+  Time::Piece: 0
   perl: 5.008007
 resources:
   bugtracker: http://github.com/vti/app-tlsme/issues
   license: http://dev.perl.org/licenses/
   repository: http://github.com/vti/app-tlsme
-version: 0.10
+version: 0.11
